fix(filter-panel): define checkbox overflow container

--- a/src/components/FilterPanel/FilterPanelCheckboxWithOverflowMenu/_index.scss
+++ b/src/components/FilterPanel/FilterPanelCheckboxWithOverflowMenu/_index.scss
@@ -35,7 +35,7 @@
   }
 
   &__overflow-options {
-    width: auto;
+    width: 100%;
 
     .#{$prefix}--overflow-menu-options__option {
       height: $carbon--layout-02;
